--- a/src/app/personnels/info-person/academic-rank/academic-rank.component.html
+++ b/src/app/personnels/info-person/academic-rank/academic-rank.component.html
@@ -104,8 +104,8 @@
           </div>
 
           <div class="item-control  ">
-            <label>Năm phong</label>
-            <input type="text" formControlName="yearReceive">
+            <label class="mgr-20">Năm phong</label>
+            <input type="number" formControlName="yearReceive">
           </div>
         </div>
       </div>
@@ -142,8 +142,8 @@
           </div>
           <!---->
           <div class="item-control ">
-            <label>Năm phong</label>
-            <input type="date" formControlName="yearReceive">
+            <label class="mgr-20">Năm phong</label>
+            <input type="number" formControlName="yearReceive">
           </div>
         </div>
       </div>
