--- a/src/app/personnels/manager-personnels/edit-personnel/edit-personnel.component.html
+++ b/src/app/personnels/manager-personnels/edit-personnel/edit-personnel.component.html
@@ -13,7 +13,7 @@
             </select>
           </div>
           <div class="item-control">
-            <label class=" " style="margin-right: 116px;">Nhập tên hoặc mã cán bộ để kiếm </label>
+            <label class=" " style="margin-right: 123px;">Nhập tên hoặc mã cán bộ để kiếm </label>
             <input type="text" class="mgb-15 mgr-20" style="float: none;width: 50%" formControlName="nameOrCodePersonnel">
             <button class="btn-action" (click)="onSearch()">Tìm kiếm</button>
           </div>
@@ -51,7 +51,7 @@
                 <td>
                   <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
                 </td>
-                <td>
+                <td style="text-align: center">
                   <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
                 </td>
               </tr>
